update layout and chart JS

--- a/base.html
+++ b/base.html
@@ -34,10 +34,10 @@
                 </a>
                 <ul class="collapse list-unstyled show" >
                     <li>
-                        <a href="pages/charts/chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
+                        <a href="chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
                     </li>
                     <li>
-                        <a href="pages/tables/google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
                     </li>
                 </ul>
             </li>
@@ -57,9 +57,9 @@
             </li>
         </ul>
     </nav>
-<!--    Page Content-->
+    <!--    Page Content-->
     <div id="content" class="gray-bg">
-<!--        Top Header-->
+        <!--        Top Header-->
         <nav class="navbar navbar-light bg-light navbar-static-top">
             <div class="navbar-left">
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
@@ -141,72 +141,16 @@
                 </li>
             </ul>
         </nav>
-<!--Main Content-->
+        <!--Main Content-->
         <div class="wrapper-content">
-            <div class="row">
-                <div class="col-sm-3">
-                    <div class="card">
-                        <div class="card-header">
-                            Income
-                            <span class="badge badge-info float-right">Monthly</span>
-                        </div>
-                        <div class="card-body">
-                            <div class="h1">40 886,200</div>
-                            <span class="text-muted small">Total Income</span>
-                            <span class="text-green float-right">98% <i class="fa fa-bolt"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <div class="card-header">
-                            Order
-                            <span class="badge badge-info float-right">Daily</span>
-                        </div>
-                        <div class="card-body">
-                            <div class="h1">42</div>
-                            <span class="text-muted small">Total Order</span>
-                            <span class="text-danger float-right">18% <i class="fa fa-bolt"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <div class="card-header">
-                            Visits
-                            <span class="badge badge-dark float-right">Today</span>
-                        </div>
-                        <div class="card-body">
-                            <div class="h1">40 886,200</div>
-                            <span class="text-muted small">Total Income</span>
-                            <span class="text-green float-right">98% <i class="fa fa-bolt"></i></span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-3">
-                    <div class="card">
-                        <div class="card-header">
-                            User Activities
-                            <span class="badge badge-danger float-right">This week</span>
-                        </div>
-                        <div class="card-body">
-                            <div class="h1">40 886,200</div>
-                            <span class="text-muted small">Total Income</span>
-                            <span class="text-green float-right">98% <i class="fa fa-bolt"></i></span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
 
+        </div>
     </div>
 </div>
 </body>
 <script src="js/jquery/3.3.1/jquery.slim.min.js"></script>
 <script src="js/bootstrap/4.1.0/bootstrap.min.js"></script>
 <script src="js/font-awesome/5.0.13/all.min.js"></script>
-<script src="js/chart-js/2.9.3/util.js"></script>
-<script src="js/chart-js/2.9.3/chart-2.9.3.min.js"></script>
 <script src="js/app.js"></script>
 
 <script type="text/javascript">
