--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 </a>
                 <ul class="collapse list-unstyled show" >
                     <li>
-                        <a href="pages/charts/chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
+                        <a href="pages/chart-js.html"><i class="far fa-circle"></i> Chart JS</a>
                     </li>
                     <li>
-                        <a href="pages/tables/google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
+                        <a href="pages/google-chart.html"><i class="far fa-circle"></i> Google Chart</a>
                     </li>
                 </ul>
             </li>
@@ -48,10 +48,10 @@
                 </a>
                 <ul class="collapse list-unstyled show" id="homeSubmenu">
                     <li>
-                        <a href="basic_tables.html"><i class="far fa-circle"></i> Basic Tables</a>
+                        <a href="pages/basic_tables.html"><i class="far fa-circle"></i> Basic Tables</a>
                     </li>
                     <li>
-                        <a href="data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
+                        <a href="pages/data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
                     </li>
                 </ul>
             </li>
