--- a/pages/chart-js.html
+++ b/pages/chart-js.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Bootstrap - Chart JS</title>
-    <link rel="stylesheet" href="css/bootstrap/4.0.0/bootstrap.css">
-    <link rel="stylesheet" href="css/variable.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="../css/bootstrap/4.0.0/bootstrap.css">
+    <link rel="stylesheet" href="../css/variable.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
     <style>
         canvas {
             max-width: 100%
@@ -19,7 +19,7 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <img class="admin-avatar rounded-circle" src="img/admin-avatar.jpg" alt="admin-avatar">
+            <img class="admin-avatar rounded-circle" src="../img/admin-avatar.jpg" alt="admin-avatar">
             <div class="ml-3 admin-info">
                 Alice <br>
                 <i class="fa fa-circle text-green"></i> Online
@@ -27,7 +27,7 @@
         </div>
         <ul class="list-unstyled components">
             <li class="active">
-                <a href="index.html">
+                <a href="../index.html">
                     <i class="fas fa-home"></i>
                     Home
                 </a>
@@ -80,7 +80,7 @@
                         <li>
                             <div class="dropdown-messages-box">
                                 <div class="message-avatar-box">
-                                    <img alt="image" class="message-avatar rounded-circle" src="img/admin-avatar.jpg">
+                                    <img alt="image" class="message-avatar rounded-circle" src="../img/admin-avatar.jpg">
                                 </div>
                                 <div class="message-content">
                                     <small class="float-right">46h ago</small>
@@ -199,12 +199,12 @@
     </div>
 </div>
 </body>
-<script src="js/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="js/bootstrap/4.1.0/bootstrap.min.js"></script>
-<script src="js/font-awesome/5.0.13/all.min.js"></script>
-<script src="js/chart-js/2.9.3/chart-2.9.3.min.js"></script>
-<script src="js/chart-js/2.9.3/util.js"></script>
-<script src="js/app.js"></script>
+<script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="../js/bootstrap/4.1.0/bootstrap.min.js"></script>
+<script src="../js/font-awesome/5.0.13/all.min.js"></script>
+<script src="../js/chart-js/2.9.3/chart-2.9.3.min.js"></script>
+<script src="../js/chart-js/2.9.3/util.js"></script>
+<script src="../js/app.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
