--- a/pages/data-tables.html
+++ b/pages/data-tables.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Bootstrap - Data Tables</title>
-    <link rel="stylesheet" href="css/bootstrap/4.0.0/bootstrap.css">
-    <link rel="stylesheet" href="css/data-tables/1.10.20/data-tables.min.css">
-    <link rel="stylesheet" href="css/variable.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="../css/bootstrap/4.0.0/bootstrap.css">
+    <link rel="stylesheet" href="../css/data-tables/1.10.20/data-tables.min.css">
+    <link rel="stylesheet" href="../css/variable.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/sidebar.css">
 </head>
 <body>
 <div class="wrapper">
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <img class="admin-avatar rounded-circle" src="img/admin-avatar.jpg" alt="admin-avatar">
+            <img class="admin-avatar rounded-circle" src="../img/admin-avatar.jpg" alt="admin-avatar">
             <div class="ml-3 admin-info">
                 Alice <br>
                 <i class="fa fa-circle text-green"></i> Online
@@ -23,7 +23,7 @@
         </div>
         <ul class="list-unstyled components">
             <li class="active">
-                <a href="index.html">
+                <a href="../index.html">
                     <i class="fas fa-home"></i>
                     Home
                 </a>
@@ -76,7 +76,7 @@
                         <li>
                             <div class="dropdown-messages-box">
                                 <div class="message-avatar-box">
-                                    <img alt="image" class="message-avatar rounded-circle" src="img/admin-avatar.jpg">
+                                    <img alt="image" class="message-avatar rounded-circle" src="../img/admin-avatar.jpg">
                                 </div>
                                 <div class="message-content">
                                     <small class="float-right">46h ago</small>
@@ -638,12 +638,12 @@
     </div>
 </div>
 </body>
-<script src="js/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="js/bootstrap/4.1.0/bootstrap.min.js"></script>
-<script src="js/font-awesome/5.0.13/all.min.js"></script>
-<script src="js/data-tables/1.10.20/data-tables-jquery.min.js"></script>
-<script src="js/data-tables/1.10.20/data-tables.min.js"></script>
-<script src="js/app.js"></script>
+<script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
+<script src="../js/bootstrap/4.1.0/bootstrap.min.js"></script>
+<script src="../js/font-awesome/5.0.13/all.min.js"></script>
+<script src="../js/data-tables/1.10.20/data-tables-jquery.min.js"></script>
+<script src="../js/data-tables/1.10.20/data-tables.min.js"></script>
+<script src="../js/app.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
