--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Bootstrap</title>
-    <link rel="stylesheet" href="css/bootstrap/4.0.0/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap/4.4.1/bootstrap.css">
     <link rel="stylesheet" href="css/variable.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/sidebar.css">
@@ -52,6 +52,17 @@
                     </li>
                     <li>
                         <a href="pages/data-tables.html"><i class="far fa-circle"></i> Data Tables</a>
+                    </li>
+                </ul>
+            </li>
+            <li>
+                <a href="#form" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-edit"></i>
+                    Forms
+                </a>
+                <ul class="collapse list-unstyled show" id="form">
+                    <li>
+                        <a href="pages/form.html"><i class="far fa-circle"></i> Basic Forms</a>
                     </li>
                 </ul>
             </li>
@@ -203,7 +214,7 @@
 </div>
 </body>
 <script src="js/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="js/bootstrap/4.1.0/bootstrap.min.js"></script>
+<script src="js/bootstrap/4.4.1/bootstrap.min.js"></script>
 <script src="js/font-awesome/5.0.13/all.min.js"></script>
 <script src="js/chart-js/2.9.3/util.js"></script>
 <script src="js/chart-js/2.9.3/chart-2.9.3.min.js"></script>
