--- a/pages/base.html
+++ b/pages/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My Bootstrap</title>
-    <link rel="stylesheet" href="../css/bootstrap/4.0.0/bootstrap.css">
+    <link rel="stylesheet" href="../css/bootstrap/4.4.1/bootstrap.css">
     <link rel="stylesheet" href="../css/variable.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/sidebar.css">
@@ -55,6 +55,17 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="#form" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                    <i class="fa fa-edit"></i>
+                    Forms
+                </a>
+                <ul class="collapse list-unstyled show" id="form">
+                    <li>
+                        <a href="pages/form.html"><i class="far fa-circle"></i> Basic Forms</a>
+                    </li>
+                </ul>
+            </li>
         </ul>
     </nav>
     <!--    Page Content-->
@@ -66,80 +77,6 @@
                     <i class="fas fa-align-left"></i>
                 </button>
             </div>
-            <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-envelope"></i>  <span class="badge badge-warning">16</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-messages">
-                        <li>
-                            <div class="dropdown-messages-box">
-                                <div class="message-avatar-box">
-                                    <img alt="image" class="message-avatar rounded-circle" src="../img/admin-avatar.jpg">
-                                </div>
-                                <div class="message-content">
-                                    <small class="float-right">46h ago</small>
-                                    <strong>Mike Loreipsum</strong> started following <strong>Monica Smith</strong>. <br>
-                                    <small class="text-muted">3 days ago at 7:58 pm - 10.06.2014</small>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li class="dropdown-messages-footer">
-                            <a href="">Read All Messages</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle count-info" data-toggle="dropdown" href="#">
-                        <i class="fa fa-bell"></i>  <span class="badge badge-info">8</span>
-                    </a>
-                    <ul class="dropdown-menu dropdown-alerts">
-                        <li>
-                            <a href="mailbox.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-envelope fa-fw"></i> You have 16 messages
-                                    <span class="float-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <a href="profile.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="float-right text-muted small">12 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <a href="grid_options.html" class="dropdown-item">
-                                <div>
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="float-right text-muted small">4 minutes ago</span>
-                                </div>
-                            </a>
-                        </li>
-                        <li class="dropdown-divider"></li>
-                        <li>
-                            <div class="text-center link-block">
-                                <a href="notifications.html" class="dropdown-item">
-                                    <strong>See All Alerts</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-
-
-                <li>
-                    <a href="">
-                        <i class="fa fa-sign-out-alt"></i> Log out
-                    </a>
-                </li>
-            </ul>
         </nav>
         <!--Main Content-->
         <div class="wrapper-content">
@@ -149,7 +86,7 @@
 </div>
 </body>
 <script src="../js/jquery/3.3.1/jquery.slim.min.js"></script>
-<script src="../js/bootstrap/4.1.0/bootstrap.min.js"></script>
+<script src="../js/bootstrap/4.4.1/bootstrap.min.js"></script>
 <script src="../js/font-awesome/5.0.13/all.min.js"></script>
 <script src="../js/app.js"></script>
 
