--- a/pages/form.html
+++ b/pages/form.html
@@ -82,8 +82,8 @@
         <div class="wrapper-content">
             <h1>Basic Forms</h1>
             <div class="row">
-                <div class="col-sm-6 mt-4">
-                    <div class="card">
+                <div class="col-sm-6">
+                    <div class="card  mt-4">
                         <div class="card-header">General Form</div>
                         <div class="card-body">
                             <form role="form">
@@ -111,9 +111,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 mt-4">
-                    <div class="card">
+                    <div class="card mt-4">
                         <div class="card-header">Horizontal Form</div>
                         <div class="card-body">
                             <form class="form-horizontal">
@@ -148,18 +146,7 @@
                             </form>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-6 mt-4">
-                    <div class="card">
-                        <div class="card-header">Validation Form</div>
-                        <div class="card-body">
-                            <form class="form-horizontal">
-                            </form>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-6 mt-4">
-                    <div class="card">
+                    <div class="card mt-4">
                         <div class="card-header">Input sizings</div>
                         <div class="card-body">
                             <form class="form-horizontal">
@@ -172,8 +159,101 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 mt-4">
-                    <div class="card">
+                <div class="col-sm-6">
+                    <div class="card mt-4">
+                        <div class="card-header">Validation Form</div>
+                        <div class="card-body">
+                            <form class="was-validated">
+                                <div class="form-row">
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer01">First name</label>
+                                        <input type="text" class="form-control is-valid" id="validationServer01" value="Alice" required="">
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer02">Last name</label>
+                                        <input type="text" class="form-control is-valid" id="validationServer02" value="Elizabeth" required="">
+                                        <div class="valid-feedback">
+                                            Looks good!
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServerUsername">Username</label>
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text" id="inputGroupPrepend3">@</span>
+                                            </div>
+                                            <input type="text" class="form-control is-invalid" id="validationServerUsername" aria-describedby="inputGroupPrepend3" required="">
+                                            <div class="invalid-feedback">
+                                                Please choose a username.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer04">State</label>
+                                        <select class="custom-select is-invalid" id="validationServer04" required="">
+                                            <option selected="" disabled="" value="">Choose...</option>
+                                            <option>...</option>
+                                        </select>
+                                        <div class="invalid-feedback">
+                                            Please select a valid state.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="customControlValidation2">Gender</label>
+                                    <div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" class="custom-control-input" id="customControlValidation2" name="radio-stacked" required>
+                                            <label class="custom-control-label" for="customControlValidation2">Male</label>
+                                        </div>
+                                        <div class="custom-control custom-radio custom-control-inline">
+                                            <input type="radio" class="custom-control-input" id="customControlValidation3" name="radio-stacked" required>
+                                            <label class="custom-control-label" for="customControlValidation3">Female</label>
+                                            <div class="ml-3 invalid-feedback">Please select a gender</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-row">
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer03">City</label>
+                                        <input type="text" class="form-control is-invalid" id="validationServer03" required="">
+                                        <div class="invalid-feedback">
+                                            Please provide a valid city.
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-3">
+                                        <label for="validationServer05">Zip</label>
+                                        <input type="text" class="form-control is-invalid" id="validationServer05" required="">
+                                        <div class="invalid-feedback">
+                                            Please provide a valid zip.
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <label for="validationTextarea">Description</label>
+                                    <textarea class="form-control is-invalid" id="validationTextarea" placeholder="Required example textarea" required></textarea>
+                                    <div class="invalid-feedback">
+                                        Please enter a message in the textarea.
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="custom-control custom-checkbox mb-3">
+                                        <input type="checkbox" class="custom-control-input" id="customControlValidation1" required>
+                                        <label class="custom-control-label" for="customControlValidation1">Agree to terms and conditions</label>
+                                        <div class="invalid-feedback">You must agree before submitting.</div>
+                                    </div>
+                                </div>
+                            </form>
+                            <hr>
+                            <button class="btn btn-primary" type="submit">Submit form</button>
+                        </div>
+                    </div>
+                    <div class="card mt-4">
                         <div class="card-header">Other Input Styles</div>
                         <div class="card-body">
                             <div class="input-group mb-2">
@@ -340,7 +420,14 @@
                                         </div>
                                     </div>
                                 </div>
-
+                                <hr />
+                                <div class="form-group row">
+                                    <label class="col-sm-2 col-form-label">Range</label>
+                                    <div class="col-sm-10">
+                                        <label for="customRange1">Example range</label>
+                                        <input type="range" class="custom-range" id="customRange1">
+                                    </div>
+                                </div>
                                 <hr />
                                 <div class="form-group row">
                                     <div class="col-sm-4 col-sm-offset-2">
